Joda-Time version 1.3
---------------------

Joda-Time is a date and time handling library that seeks to replace the JDK
Date and Calendar classes.

This is the fourth full release of Joda-Time.
This release focuses on bug fixes, with a few new features.

We recommend JDK 1.3 or later, and have performed no testing on earlier JDKs.

Joda-Time is licensed under the business-friendly Apache License Version 2.
This is the same license as all of Apache, plus other open source projects such as Spring.
The intent is to make the code available to the Java community with the minimum
of restrictions. If the license causes you problems please contact the mailing list.

** Please also check out the JSP and Hibernate contributed projects **


Incompatible changes since 1.2
------------------------------
Binary compatible - Yes

Source compatible - Yes
  - v1.2 and v1.3 are source compatible in their public and protected API

Serialization compatible - Yes

Data compatible - Yes
  - DateTimeZone data updated to version 2005q


Deprecations since 1.2
----------------------


Bug fixes since 1.2
-------------------
- DateTimeFormatterBuilder.MatchingParser
  Previously didn't estimate parsed length correctly

- YearMonthDay/TimeOfDay/Partial.Property
  Hashcode was not defined


Enhancements since 1.2
----------------------


Feedback
--------
All feedback is welcomed at joda-interest@lists.sourceforge.net.

The Joda team